Fixes #2132 managed purl alignment issue (#2176)

--- a/app/assets/stylesheets/modules/record-metadata-section.scss
+++ b/app/assets/stylesheets/modules/record-metadata-section.scss
@@ -9,7 +9,8 @@
 }
 
 .record-metadata,
-.upper-record-metadata {
+.upper-record-metadata,
+.purl-embed-viewer {
   @include show-page-row-layout;
 
   .section-heading {
